--- a/styles/style.css
+++ b/styles/style.css
@@ -1,118 +1,124 @@
 body {
-      font-family: 'Quicksand', sans-serif;
-  
-
+  font-family: "Quicksand", sans-serif;
+  background-color: #B799FF;
   margin: 0;
   padding: 0;
-    
-  }
-  
-  .input-card {
-    width: 500px;
-    padding: 35px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+}
 
-  
-  
-  .input-card input[type="text"],
-  .input-card textarea,
-  .input-card select,
-  .input-card input[type="date"],
-  .input-card input[type="number"] {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    box-sizing: border-box;
-  }
-  
-  .input-card textarea {
-    resize: none; /* Prevents resizing */
-  }
-  
-  .input-card button[type="submit"] {
-    background-color: #2CD3E1;
-    color: white;
-    padding: 10px 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 20px;
-    
-  }
-  
-  .input-card button[type="submit"]:hover {
-    background-color: #2CD3E5;
-  }
-  
-  .input-card label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .input-card select,
-  .input-card input[type="date"],
-  .input-card input[type="number"] {
-    display: inline-block;
-    width: 48%;
-    margin-bottom: 10px;
-  }
-  
-  .input-card .first-div {
-    display: flex;
-    gap: 20px;
-    margin-top: 5px;
-    margin-bottom: 10px;
-  }
-  
-  .input-card .second-div {
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    margin: 30px;
-  }
-  
-  .amount-div {
-    margin: 0px 0px 20px 0px;
-  }
-  
+.input-card {
+  width: 500px;
+  height: 600px; /* Adjust the height to your preference */
+  padding: 35px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1;
+  background-color: white;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+}
 
- 
-  
-  .title{
-    text-align: center;
-    margin-top: 20px;
-  }
+.input-card input[type="text"],
+.input-card textarea,
+.input-card select,
+.input-card input[type="date"],
+.input-card input[type="number"] {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-sizing: border-box;
+}
 
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-    max-width: 1200px;
-    gap: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    overflow: auto; /* Add this line */
-  }
-  
-  .pie-card {
-    width: 500px;
-    padding: 35px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: relative; /* Add this line */
-    z-index: 1; /* Add this line */
-  }
-  
-  
+.input-card textarea {
+  resize: none; /* Prevents resizing */
+}
+
+.input-card button[type="submit"] {
+  background-color: #2cd3e1;
+  color: white;
+  padding: 10px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.input-card button[type="submit"]:hover {
+  background-color: #2cd3e5;
+}
+
+.input-card label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.input-card select,
+.input-card input[type="date"],
+.input-card input[type="number"] {
+  display: inline-block;
+  width: 48%;
+  margin-bottom: 10px;
+}
+
+.input-card .first-div {
+  display: flex;
+  gap: 20px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.input-card .second-div {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  margin: 30px;
+}
+
+.amount-div {
+  margin: 0px 0px 20px 0px;
+}
+
+.title {
+  text-align: center;
+  margin-top: 20px;
+  color: white;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  max-width: 1200px;
+  gap: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: auto; /* Add this line */
+  background-color: none;
+  padding:15px;
+}
+
+.pie-card {
+  width: 500px;
+  height: 600px; /* Adjust the height to match the input card */
+  padding: 35px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-radius: 10px;
+}
+
+#pie-chart {
+  width: 100%;
+  height: 100%;
+}
+
+#expense-form {
+  padding: 50px;
+}
