finished layout for expenses, dynamically works

--- a/styles/style.css
+++ b/styles/style.css
@@ -125,7 +125,7 @@ body {
   padding: 50px;
 }
 
-.expense-field{
+.expense-container{
   width: 92%;
  /* Adjust the height to your preference */
   padding: 35px;
